2005-02-15  Ethan Merritt  <merritt@u.washington.edu>

	* src/save.c src/save.h: New routine save_fillstyle consolidates
	redundant code to convert a fill_style_type into a text description.

	* src/save.c src/save.h: New routine save_pm3dcolor consolidates
	redundant code to convert a colorspec struct into a text description.

	* src/save.c (save_set_all save_textcolor) src/show.c (show_linestyle):
	Call shared routines rather than duplicate code in-line.

2005-02-14  Ethan Merritt  <merritt@u.washington.edu>

	* term/pdf.trm (PDF_options PDF_init PDF_dot): Add terminal option
	{rounded|butt} exactly parallel to post.trm. The default is butt
	ends and mitred line joins. "rounded" switches to rounded ends and
	rounded joins.

2005-02-14  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/term.c: Added #include "getcolor.h".

	* term/aquaterm.trm term/pdf.trm term/post.trm term/svg.trm: Removed
	#include "getcolor.h".

	* term/x11.trm: Removed #include "getcolor.h", #ifdef WITH_IMAGE_BUG
	#include "graphics.h".

	* term/vgagl.trm: Removed #include "driver.h", "pm3d.h", "mousecmn.h".

2005-02-14  Harald Harders  <h.harders@tu-bs.de>

	* term/pslatex.trm: SourceForge patch #1121972 "Improve input encoding
	in epslatex terminal". Added the koi8-u encoding to epslatex. Added
	\inputencoding{...} to the output file. This enables the user to use
	different input encodings in the surrounding LaTeX file and in the plot.
	Added a user-friendly error message if the package graphicx.sty or
	graphics.sty is not loaded.

2005-02-13  Harald Harders  <h.harders@tu-bs.de>

	* term/post.trm term/pslatex.trm: Clean up code in accordance with
	compiler warnings.

2005-02-13  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* configure.in: New configuration option --enable-x11-mbfonts
	(enabled by default).  Interpretation of character encodings
	is determined at run time by the LC_CTYPE locale setting.
	
	* src/gplt_x11.c: All calls to x11 font handling routines are